fix spacing list collum and canvas size for globe 3D

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -93,6 +93,7 @@ a:hover {
 }
 
 #iss-3D-view {
+  width: 100%3;
   border-radius: 5px;
   margin-top: 10px;
 }
