--- a/src/app/globe-iss/globe-iss.component.scss
+++ b/src/app/globe-iss/globe-iss.component.scss
@@ -1,3 +1,11 @@
+#canvas {
+  height: 100%;
+  width: 100%;
+}
 
-  
-    
+@media screen and (max-width: 600px) {
+  #canvas {
+    height: 250%;
+    width: 100%;
+  }
+}
