--- a/src/app/list-astronauts/list-astronauts.component.scss
+++ b/src/app/list-astronauts/list-astronauts.component.scss
@@ -25,6 +25,18 @@
     width: fit-content +10px;
     
     margin-left: 10px;
+
+    .mat-column-name {
+      
+      width: 35%;
+      
+    }
+
+    .mat-column-role {
+      
+      width: 30%;
+      
+    }
     
     
     border: solid rgb(255, 255, 255);
